[package]
name        = 'pallet-lbp'
authors     = ["DICO-TEAM"]
description = 'dico-chain lbp Pallet'
license     = 'Apache 2.0'
version     = '1.0.0'
homepage    = 'https://github.com/DICO-TEAM/dico-chain'
repository  = 'https://github.com/DICO-TEAM/dico-chain'
edition     = '2021'


[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
substrate-wasm-builder = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.16', default-features = false }

[dependencies]
codec                 = { package = 'parity-scale-codec', version = '2.3.1', default-features = false }
serde                 = { version = '1.0.102', optional = true }
scale-info 		      = { version = "1.0", default-features = false, features = ["derive"] }



# orml
orml-tokens   = { git = 'https://github.com/open-web3-stack/open-runtime-module-library.git', default-features = false, branch = "master"}
orml-traits   = { git = 'https://github.com/open-web3-stack/open-runtime-module-library.git', default-features = false, branch = "master"}

# local
dico-primitives      = { package = "dico-primitives", default-features = false, path = "../../primitives" }
pallet-dico-treasury = { package = "pallet-dico-treasury", default-features = false, path = "../treasury" }


# frame dependencies
frame-benchmarking        = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.16', default-features = false, optional = true }
frame-support             = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.16', default-features = false }
frame-system              = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.16', default-features = false }
frame-system-benchmarking = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.16', default-features = false, optional = true }

# dependencies primitives
sp-core    = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.16', default-features = false }
sp-std     = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.16', default-features = false }
sp-runtime = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.16', default-features = false }

[dev-dependencies]
sp-io = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.16', default-features = false }


[features]
default = ['std']
runtime-benchmarks = [
    "frame-benchmarking",
    "frame-system/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
]
std = [
    'serde',
    'codec/std',
    "scale-info/std",

    'dico-primitives/std',
    'pallet-dico-treasury/std',

    'frame-support/std',
    'frame-system/std',

    'sp-runtime/std',
    'sp-core/std',
    'sp-std/std',

    'orml-tokens/std',
    'orml-traits/std',

]
