[package]
name       = "pallet-nft"
authors    = ["DICO-TEAM"]
license    = 'Apache 2.0'
version    = '1.0.0'
homepage   = 'https://github.com/DICO-TEAM/dico-chain'
repository = 'https://github.com/DICO-TEAM/dico-chain'
edition     = '2021'

[dependencies]
scale-info 			  = { version = "1.0", default-features = false, features = ["derive"] }
codec                 = { package = 'parity-scale-codec', version = '2.3.1', default-features = false }
serde                 = { version = '1', optional = true }

sp-std          = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13", default-features = false }
sp-runtime      = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13", default-features = false }

frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13", default-features = false, optional = true }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13", default-features = false }
frame-system  = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13", default-features = false }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13", default-features = false }

# local
pallet-ico = { path = "../ico", default-features = false}
dico-primitives = { path = "../../primitives", default-features = false}

[dev-dependencies]
sp-io   = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }


[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"scale-info/std",

	"sp-std/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-ico/std",
	"dico-primitives/std",
	"pallet-balances/std",
]

runtime-benchmarks = [
	"frame-benchmarking",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
]

try-runtime = ["frame-support/try-runtime"]
