[package]
edition     =  "2018"
name        =  "pallet-oracle"
authors     =  ["DICO-TEAM"]
description =  'orml oracle.'
license     =  'Apache 2.0'
version     =  '1.0.0'
homepage    =  'https://github.com/DICO-TEAM/dico-chain'
repository  =  'https://github.com/DICO-TEAM/dico-chain'

[dependencies]
serde                 = { version = '1', optional = true }
codec                 = { package = 'parity-scale-codec', version = '2.3.1', default-features = false }

frame-support = { git     = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.13', default-features  = false }
frame-system  = { git     = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.13', default-features  = false }
sp-io         = { git     = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.13', default-features  = false }
sp-core       = { git     = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.13', default-features  = false }
sp-runtime    = { git     = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.13', default-features  = false }
sp-std        = { git     = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.13', default-features  = false }
primitives    = { package = "dico-primitives", path= "../../primitives", default-features = false }


# ORML
orml-traits    = { git = 'https://github.com/open-web3-stack/open-runtime-module-library.git', default-features = false }
orml-utilities = { git = 'https://github.com/open-web3-stack/open-runtime-module-library.git', default-features = false }


[features]
default = ["std"]
std = [
    "serde",
    "codec/std",
    'sp-core/std',
    #"sp-application-crypto/std",
    "sp-io/std",
    "sp-runtime/std",
    "sp-std/std",
    "frame-support/std",
    "frame-system/std",
    "orml-traits/std",
    "orml-utilities/std",
    "primitives/std",
]
