[package]
name        = 'pallet-pricedao'
authors     = ["DICO-TEAM"]
description = 'price dao.'
license     = 'Apache 2.0'
version     = '1.0.0'
homepage    = 'https://github.com/DICO-TEAM/dico-chain'
repository  = 'https://github.com/DICO-TEAM/dico-chain'
edition     = '2018'


[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
primitive-types 	  = { default-features = false, version = '0.10.1' }
codec                 = { package = 'parity-scale-codec', version = '2.3.1', default-features = false }
serde                 = { version = '1', optional = true }

# local
pallet-amm         = { path = '../../pallets/amm', default-features = false}
pallet-oracle      = { path = '../oracle', default-features = false}
dico-currencies	   = { package = "pallet-currencies", path = "../currencies", default-features = false }
primitives         = { package = "dico-primitives", path = "../../primitives", default-features = false }


# substrate
frame-benchmarking = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13', default-features = false, optional = true }
frame-support      = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13', default-features = false }
frame-system       = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13', default-features = false }
sp-std             = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.13', default-features = false }
sp-runtime         = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.13', default-features = false }
sp-core            = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.13', default-features = false }
sp-io              = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.13', default-features = false }
pallet-balances    = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.13', default-features = false }

# ORML
orml-tokens    = { git = 'https://github.com/open-web3-stack/open-runtime-module-library.git', default-features = false }
orml-traits    = { git = 'https://github.com/open-web3-stack/open-runtime-module-library.git', default-features = false }
orml-utilities = { git = 'https://github.com/open-web3-stack/open-runtime-module-library.git', default-features = false }


[dev-dependencies]
serde      = { version = '1'}
sp-core    = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13', default-features = false }
sp-runtime = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13', default-features = false }
sp-io      = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13', default-features = false }

[features]
default = ['std']
std = [
	"serde",
	'codec/std',
	'frame-support/std',
	'frame-system/std',
	"orml-tokens/std",
#	"orml-utilities/std",
	"primitives/std",
	"pallet-oracle/std",
	"sp-std/std",
	"pallet-balances/std",
	'sp-core/std',
	"sp-io/std",
	"sp-runtime/std",
	"orml-traits/std",
	"orml-utilities/std",
	"dico-currencies/std",
]
runtime-benchmarks = [
	"frame-benchmarking",
	"frame-system/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
]

