[package]
name        = 'pallet-pricedao'
authors     = ["DICO-TEAM"]
description = 'price dao.'
license     = 'Apache 2.0'
version     = '1.0.0'
homepage    = 'https://github.com/DICO-TEAM/dico-chain'
repository  = 'https://github.com/DICO-TEAM/dico-chain'
edition     = '2021'


[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
primitive-types 	  = { default-features = false, version = '0.11.1' }
codec                 = { package = 'parity-scale-codec', version = '3.0.0', default-features = false }
serde                 = { version = '1', optional = true }
scale-info         = { version = "2.1.1", default-features = false, features = ["derive"] }

# local
pallet-amm         = { path = '../../pallets/amm', default-features = false}
pallet-oracle      = { path = '../oracle', default-features = false}
dico-currencies    = { package = "pallet-currencies", path = "../currencies", default-features = false }
primitives         = { package = "dico-primitives", path = "../../primitives", default-features = false }


# substrate
frame-benchmarking = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.29', default-features = false, optional = true }
frame-support      = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.29', default-features = false }
frame-system       = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.29', default-features = false }
sp-std             = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.29', default-features = false }
sp-runtime         = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.29', default-features = false }
sp-core            = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.29', default-features = false }
sp-io              = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.29', default-features = false }
pallet-balances    = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.29', default-features = false }

# ORML
orml-tokens        = { default-features = false, git = "https://github.com/open-web3-stack/open-runtime-module-library.git", branch = 'polkadot-v0.9.29'}
orml-traits        = { default-features = false, git = "https://github.com/open-web3-stack/open-runtime-module-library.git", branch = 'polkadot-v0.9.29'}
orml-utilities     = { default-features = false,git = "https://github.com/open-web3-stack/open-runtime-module-library.git", branch = 'polkadot-v0.9.29'}



[dev-dependencies]
serde      = { version = "1.0.102" }
sp-core    = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.29', default-features = false }
sp-runtime = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.29', default-features = false }
sp-io      = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.29', default-features = false }

[features]
default = ['std']
std = [
	"serde",
	'codec/std',
	"primitive-types/std",
	"scale-info/std",

	'frame-support/std',
	'frame-system/std',

	"orml-tokens/std",
	"orml-utilities/std",
	"orml-traits/std",

	"primitives/std",
	"pallet-amm/std",
	"pallet-oracle/std",

	"sp-std/std",
	'sp-core/std',
	"sp-io/std",
	"sp-runtime/std",

	"pallet-balances/std",


]
runtime-benchmarks = [
	"frame-benchmarking",
	"frame-system/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
]

