[package]
name       = "pallet-dico-treasury"
authors    = ["DICO-TEAM"]
version    = "1.0.0"
license    = 'Apache 2.0'
homepage   = 'https://github.com/DICO-TEAM/dico-chain'
repository = 'https://github.com/DICO-TEAM/dico-chain'
edition    = '2018'


[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
impl-trait-for-tuples = "0.2.1"
serde              = { version = "1", optional = true, features = ["derive"] }
codec                 = { package = 'parity-scale-codec', version = '2.3.1', default-features = false }
sp-std             = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.13", default-features = false}
sp-runtime         = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.13", default-features = false}
frame-support      = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.13", default-features = false}
frame-system       = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.13", default-features = false}
pallet-balances    = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.13", default-features = false}
frame-benchmarking = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.13", default-features = false, optional = true }


# orml
orml-traits   = { git = 'https://github.com/open-web3-stack/open-runtime-module-library.git', default-features = false }

[dev-dependencies]
sp-io      = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.13", default-features = false}
sp-core    = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.13", default-features = false}
sp-storage = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.13", default-features = false}


[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-std/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-balances/std",
	"orml-traits/std",
	"frame-benchmarking/std",
#	"sp-io/std",
#	"sp-core/std",
#	"sp-storage/std",



]

#runtime-benchmarks = [
#	"frame-benchmarking",
#	"frame-support/runtime-benchmarks",
#	"frame-system/runtime-benchmarks",
#]
#try-runtime = ["frame-support/try-runtime"]
