[package]
name       = "pallet-dico-treasury"
authors    = ["DICO-TEAM"]
version    = "1.0.0"
license    = 'Apache 2.0'
homepage   = 'https://github.com/DICO-TEAM/dico-chain'
repository = 'https://github.com/DICO-TEAM/dico-chain'
edition     = '2021'


[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
scale-info            = { version = "2.1.1", default-features                               = false, features                      = ["derive"] }
impl-trait-for-tuples = {version  = "0.2.1"}
serde                 = { version = "1.0.101", optional                                   = true, features                       = ["derive"] }
codec                 = { package = "parity-scale-codec", version                         = "3.0.0", default-features            = false, features = ["derive"] }


sp-std                = { git     = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.29", default-features = false}
sp-runtime            = { git     = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.29", default-features = false}
frame-support         = { git     = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.29", default-features = false}
frame-system          = { git     = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.29", default-features = false}
pallet-balances       = { git     = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.29", default-features = false}
frame-benchmarking    = { git     = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.29", default-features = false, optional = true }

# local
pallet-currencies = { path = "../currencies", default-features    = false}
dico-primitives   = { path = "../../primitives", default-features = false}


# orml
orml-traits = { git = 'https://github.com/open-web3-stack/open-runtime-module-library.git', branch = "polkadot-v0.9.29", default-features = false}
orml-tokens = { git = 'https://github.com/open-web3-stack/open-runtime-module-library.git', branch = "polkadot-v0.9.29", default-features = false}



[dev-dependencies]
sp-io      = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.29" }
sp-core    = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.29" }
sp-storage = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.29" }



[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"scale-info/std",
	"sp-std/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-balances/std",
	"orml-traits/std",
	"pallet-currencies/std",
	"orml-tokens/std",
	"dico-primitives/std",
]

runtime-benchmarks = [
	"frame-benchmarking",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
]
try-runtime = ["frame-support/try-runtime"]
